Completed Iteration C3: Using a Helper to Format the Price

--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -13,7 +13,7 @@
           <%= sanitize(product.description) %>
         </p>
         <div class="price">
-          <%= product.price %>
+          <%= number_to_currency(product.price) %>
         </div>
       </li>
 <% end %>
