--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -5,16 +5,20 @@
 <h1>Your Pragmatic Catalog</h1>
 
 <ul class="catalog">
-  <% @products.each do |product| %>
-      <li>
-        <%= image_tag(product.image_url) %>
-        <h2><%= product.title %></h2>
-        <p>
-          <%= sanitize(product.description) %>
-        </p>
-        <div class="price">
-          <%= number_to_currency(product.price) %>
-        </div>
-      </li>
-<% end %>
+  <% cache @product do %>
+    <% @products.each do |product| %>
+      <% cache product do %>
+        <li>
+          <%= image_tag(product.image_url) %>
+          <h2><%= product.title %></h2>
+          <p>
+            <%= sanitize(product.description) %>
+          </p>
+          <div class="price">
+            <%= number_to_currency(product.price) %>
+          </div>
+        </li>
+      <% end %>
+    <% end %>
+  <% end %>
 </ul>
