--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -117,3 +117,18 @@ header.main {
   padding: 1em 1.414em;
   text-align: center;
 }
+
+#cart {
+  article {
+    h2 {
+      margin-top: 0;
+    }
+    background: white;
+    border-radius: 0.5em;
+    margin: 1em;
+    padding: 1.414em;
+    @media (min-width: 30em) {
+      margin: 0; // desktop doesn't need this margin
+    }
+  }
+}
