--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,10 +17,10 @@
       <nav class="side_nav">
         <% if @cart %>
           <div id="cart" class="carts">
-            <%= render @cart %>
+            <%= render_if @cart && @cart.line_items.any?, @cart %>
           </div>
         <% end %>
-        
+
         <ul>
           <li><a href="/">Home</a></li>
           <li><a href="/questions">Questions</a></li>
