--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -13,7 +13,8 @@
       </tr>
     </tfoot>
   </table>
-
-  <%= button_to 'Empty cart', cart, method: :delete, data: { confirm: 'Are you sure?'} %>
-
+  <div class="actions">
+    <%= button_to 'Empty cart', cart, method: :delete, data: { confirm: 'Are you sure?'} %>
+    <%= button_to 'Checkout', new_order_path, method: :get, class: "checkout" %>
+  </div>
 </article>
