Partly completed Iteration H1: Adding Fields Dynamically to a Form (Updating Our Development Environment for Webpack)

--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -3,3 +3,4 @@
   <%= render 'form', order: @order %>
 </section>
 <!-- <%= link_to 'Back', orders_path %> -->
+<%= javascript_pack_tag("hello_react") %>
