--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -3,4 +3,4 @@
   <%= render 'form', order: @order %>
 </section>
 <!-- <%= link_to 'Back', orders_path %> -->
-<%= javascript_pack_tag("hello_react") %>
+<%= javascript_pack_tag("pay_type") %>
