Task J:Logging In completed & completed Iteration J4: Adding a Sidebar, More Administration

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
   <head>
     <title>Pragprog Books Online Store</title>
@@ -15,11 +14,10 @@
 
     <section class="content">
       <nav class="side_nav">
-        <% if @cart %>
-          <div id="cart" class="carts">
-            <%= render_if @cart && @cart.line_items.any?, @cart %>
-          </div>
-        <% end %>
+
+        <div id="cart" class="carts">
+          <%= render_if @cart && @cart.line_items.any?, @cart %>
+        </div>
 
         <ul>
           <li><a href="/">Home</a></li>
@@ -27,6 +25,17 @@
           <li><a href="/news">News</a></li>
           <li><a href="/contact">Contact</a></li>
         </ul>
+
+        <% if session[:user_id] %>
+          <nav class="logged_in_nav">
+            <ul>
+              <li><%= link_to 'Orders',   orders_path   %></li>
+              <li><%= link_to 'Products', products_path %></li>
+              <li><%= link_to 'Users',    users_path    %></li>
+              <li><%= button_to 'Logout', logout_path, method: :delete   %></li>
+            </ul>
+          </nav>
+        <% end %>
       </nav>
       <main class='<%= controller.controller_name %>'>
         <%= yield %>
